# justsu-blog

./: .gitignore  Dockerfile  README.md  docker-compose.yml  posts.json  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
blog/: models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/static/blog/: main.css
blog/templates/blog/: about.html  base.html  home.html  post_detail.html  user_posts.html
django_project/: api key  celery.py  settings.py  urls.py
users/: admin.py  forms.py  models.py  signals.py  tasks.py  tests.py  urls.py  userinfo.txt  utils.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20210601_1906.py  0003_auto_20210601_1912.py  0004_auto_20210626_1915.py  0005_auto_20210627_1237.py  0006_auto_20210627_1240.py  0007_remove_profile_location.py  0008_profile_location.py  0009_auto_20210703_1908.py
users/templates/users/: login.html  logout.html  password_change.html  password_change_done.html  password_reset_complete.html  profile.html  register.html  weather.html
