[tool.poetry]
name = "your-project"
version = "0.0.0"
description = "daily task tracker"
authors = [
    "Shashank Mishra <shashank.mishra@betterworks.com>",
]
[tool.semantic_release]
version_variable = [
    "__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = false
upload_to_release = true
