[tool.poetry]
name = "your-project"
version = "0.0.0"
description = "blog project"
authors = [
    "Shashank Mishra <shashank.mishra@betterworks.com>",
]
[tool.semantic_release]
version_variable = [
    "__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
